# active-earth-pressure

./: .gitignore  Dockerfile  README.md  calculate_earth_pressure.ipynb  earth_pressure_paper.ipynb  pyproject.toml  requirements.txt
earth_pressure_la/: __init__.py  base_mechanism.py  elements.py  kinematic_solution.py  mechanisms.py  static_sol_interactive.py  static_solution.py
misc/: definitions.py  exceptions.py  helpers.py
mpl_stylesheets/: publications.mplstyle
tests/: test_mechanisms.py  test_static_solution.py  test_wedge.py
