[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "active-earth-pressure"
version = "0.1"
description = "A Python tool to calculate active earth pressure on retaining walls undergoing translation or rotation about the bottom."
authors = [
    { name = "David Perozzi", email = "perozzid@ethz.ch" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ipython",
    "ipympl",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "matplotlib==3.5.1",
    "matplotlib-label-lines",
    "numpy",
    "pandas==1.3.5",
    "scipy"
]

[tool.setuptools]
packages = ["earth_pressure_la", "misc"]